; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckTAC.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckTAC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckTAC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckTAC() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @CheckOneTAC(i32 180)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %22

5:                                                ; preds = %0
  %6 = call i32 @CheckOneTAC(i32 220)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %5
  store i32 0, i32* %1, align 4
  br label %22

9:                                                ; preds = %5
  %10 = call i32 @CheckOneTAC(i32 286)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %22

13:                                               ; preds = %9
  %14 = call i32 @CheckOneTAC(i32 310)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13
  store i32 0, i32* %1, align 4
  br label %22

17:                                               ; preds = %13
  %18 = call i32 @CheckOneTAC(i32 330)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %17
  store i32 0, i32* %1, align 4
  br label %22

21:                                               ; preds = %17
  store i32 1, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %20, %16, %12, %8, %4
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @CheckOneTAC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
